welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:13: error: not found: value avane
  avane();
  ^FlowerCase:56: error: not found: value growFlower
  growFlower();
  ^